--- a/congrats.html
+++ b/congrats.html
@@ -138,97 +138,29 @@
 		<div class="container">
 				<div class="col-md-6 p-b-30">
 					<form class="leave-comment">
-						<h4 class="m-text15 p-b-20 p-t-5">
-							First Name	
+
+						<h4 class="m-text4 p-b-20 p-t-5">
+							Congratulations! 
+						</h4>
+
+						<h4 class="m-text10 p-b-20 p-t-1">
+							Your order has been placed!
+						</h4>
+
+						<h4 class="m-text10 p-b-20 p-t-1">
+							We hope to see you again soon!
+						</h4>
+
+						<h4 class="m-text10 p-b-20 p-t-1">
+							Thank you for using Group 13's website :)
 						</h4>
 
 
-						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="First Name">
-						</div>
-
-
-
-						<h4 class="m-text15 p-b-20 p-t-5">
-							Family Name	
-						</h4>
-
-
-						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Family Name">
-						</div>
-
-
-
-						<h4 class="m-text15 p-b-20 p-t-40">
-							Password	
-						</h4>
-
-
-						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Password">
-						</div>
-
-
-
-						<h4 class="m-text15 p-b-20 p-t-5">
-							Retype Password	
-						</h4>
-
-
-						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Retype Password">
-						</div>
-
-
-
-						<h4 class="m-text15 p-b-20 p-t-40">
-							E-mail Address	
-						</h4>
-
-
-						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="E-mail Address">
-						</div>
-
-
-						<h4 class="m-text15 p-b-20 p-t-5">
-							Retype E-mail Address	
-						</h4>
-
-
-						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Retype E-mail Address">
-						</div>
-
-
-
-
-
-
-
-						<div class="w-size25">
-							<!-- Button -->
-							<a href="login2.html" class="flex-c-m size2 bg1 bo-rad-23 hov1 m-text3 trans-0-4">
-								Create Account
-							</a>
-						</div>
-
-					</form>
-				</div>
-			</div>
-		</div>
 	</section>
 
 
 
-
-
-
-
-
-
-<!-- Footer -->
+						<!-- Footer -->
 	<footer class="bg6 p-t-45 p-b-43 p-l-45 p-r-45">
 		<div class="flex-w p-b-90">
 		</div>
@@ -264,13 +196,6 @@
 
 		</div>
 	</footer>
-
-
-
-	<!-- Container Selection -->
-	<div id="dropDownSelect1"></div>
-	<div id="dropDownSelect2"></div>
-
 
 
 
