--- a/cart.html
+++ b/cart.html
@@ -45,9 +45,17 @@
 					<a href="#" class="topbar-social-item fa fa-snapchat-ghost"></a>
 					<a href="#" class="topbar-social-item fa fa-youtube-play"></a>
 				</div>
+
+
+				<div class="topbar-child2">
+					<span class="topbar-email">
+						contact@GroupThirteen.com
+					</span>
+				</div>
 			</div>
 
 			<div class="wrap_header">
+
 				<!-- Logo -->
 				<a href="index.html" class="logo">
 					<img src="images/logo.png" alt="IMG-LOGO">
@@ -103,8 +111,6 @@
 									</div>
 								</li>
 
-							</ul>
-
 							<div class="header-cart-total">
 								Total: $00.00
 							</div>
@@ -133,98 +139,100 @@
 	</header>
 
 
-<!-- login part -->
-	<section class="bgwhite p-t-66 p-b-60">
+
+
+	<!-- Cart -->
+	<section class="cart bgwhite p-t-25 p-b-25">
 		<div class="container">
-				<div class="col-md-6 p-b-30">
-					<form class="leave-comment">
-						<h4 class="m-text15 p-b-20 p-t-5">
-							First Name	
-						</h4>
+			<!-- Cart item -->
+			<div class="container-table-cart pos-relative">
+				<div class="wrap-table-shopping-cart bgwhite">
+					<table class="table-shopping-cart">
+						<tr class="table-head">
+							<th class="column-1"></th>
+							<th class="column-2">Product</th>
+							<th class="column-3">Price</th>
+							<th class="column-4 p-l-70">Quantity</th>
+							<th class="column-5">Total</th>
+						</tr>
+
+						<tr class="table-row">
+							<td class="column-1">
+								<div class="cart-img-product b-rad-4 o-f-hidden">
+									<img src="images/item-cart-01.jpg" alt="IMG-PRODUCT">
+								</div>
+							</td>
+							<td class="column-2">Item 1</td>
+							<td class="column-3">$00.00</td>
+							<td class="column-4">
+								<div class="flex-w bo5 of-hidden w-size17">
+									<button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2">
+										<i class="fs-12 fa fa-minus" aria-hidden="true"></i>
+									</button>
+
+									<input class="size8 m-text18 t-center num-product" type="number" name="num-product1" value="1">
+
+									<button class="btn-num-product-up color1 flex-c-m size7 bg8 eff2">
+										<i class="fs-12 fa fa-plus" aria-hidden="true"></i>
+									</button>
+								</div>
+							</td>
+							<td class="column-5">$00.00</td>
+						</tr>
+
+											</table>
+				</div>
+			</div>
+
+			<div class="flex-w flex-sb-m p-t-25 p-b-25 bo8 p-l-35 p-r-60 p-lr-15-sm">
+				<div class="flex-w flex-m w-full-sm">
+					<div class="size11 bo4 m-r-10">
+						<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="coupon-code" placeholder="Coupon Code">
+					</div>
+
+					<div class="size12 trans-0-4 m-t-10 m-b-10 m-r-10">
+						<!-- Button -->
+						<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
+							Apply coupon
+						</button>
+					</div>
+				</div>
+
+				<div class="size10 trans-0-4 m-t-10 m-b-10">
+					<!-- Button -->
+					<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
+						Update Cart
+					</button>
+				</div>
+			</div>
+
+			<!-- Total -->
+			<div class="bo9 w-size18 p-l-40 p-r-40 p-t-30 p-b-38 m-t-30 m-r-0 m-l-auto p-lr-15-sm">
+				<h5 class="m-text20 p-b-24">
+					Cart Totals
+				</h5>
 
 
-						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="First Name">
-						</div>
+				<!--  -->
+				<div class="flex-w flex-sb-m p-t-26 p-b-30">
+					<span class="m-text22 w-size19 w-full-sm">
+						Total:
+					</span>
 
+					<span class="m-text21 w-size20 w-full-sm">
+						$00.00
+					</span>
+				</div>
 
-
-						<h4 class="m-text15 p-b-20 p-t-5">
-							Family Name	
-						</h4>
-
-
-						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Family Name">
-						</div>
-
-
-
-						<h4 class="m-text15 p-b-20 p-t-40">
-							Password	
-						</h4>
-
-
-						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Password">
-						</div>
-
-
-
-						<h4 class="m-text15 p-b-20 p-t-5">
-							Retype Password	
-						</h4>
-
-
-						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Retype Password">
-						</div>
-
-
-
-						<h4 class="m-text15 p-b-20 p-t-40">
-							E-mail Address	
-						</h4>
-
-
-						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="E-mail Address">
-						</div>
-
-
-						<h4 class="m-text15 p-b-20 p-t-5">
-							Retype E-mail Address	
-						</h4>
-
-
-						<div class="bo4 of-hidden size15 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Retype E-mail Address">
-						</div>
-
-
-
-
-
-
-
-						<div class="w-size25">
-							<!-- Button -->
-							<a href="login2.html" class="flex-c-m size2 bg1 bo-rad-23 hov1 m-text3 trans-0-4">
-								Create Account
-							</a>
-						</div>
-
-					</form>
+				<div class="size15 trans-0-4">
+					<!-- Button -->
+					<a href="checkout.html" class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
+						Proceed to Checkout
+					</a>
 				</div>
 			</div>
 		</div>
 	</section>
-
-
-
-
-
-
 
 
 
@@ -255,13 +263,12 @@
 			</a>
 
 			<div class="t-center s-text8 p-t-20">
-				Copyright © 2019 All rights reserved. | This website was made by Group 13. | 
+				Copyright © 2019 All rights reserved. | This website was made by Group 13.
 			</div>
 
 			<div class="t-center s-text8 p-t-20">
 				Images borrowed from https://www.pexels.com/search/food/?fbclid=IwAR1QwFFDgV_PVpvdSMK3r5-VZTZMCSdLdaUibs5IUCF3djRJwSDToqXbcK4. 
 			</div>
-
 		</div>
 	</footer>
 
@@ -270,7 +277,6 @@
 	<!-- Container Selection -->
 	<div id="dropDownSelect1"></div>
 	<div id="dropDownSelect2"></div>
-
 
 
 
@@ -294,9 +300,6 @@
 			dropdownParent: $('#dropDownSelect2')
 		});
 	</script>
-<!--===============================================================================================-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKFWBqlKAGCeS1rMVoaNlwyayu0e0YRes"></script>
-	<script src="js/map-custom.js"></script>
 <!--===============================================================================================-->
 	<script src="js/main.js"></script>
 
