--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 	<title>454 Project</title>
-	<meta http-equiv = "refresh" content = "0; url = http://3.95.168.218/contact.php" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -63,7 +62,7 @@
 							</li>
 
 							<li>
-								<a href="product.html">Menu</a>
+								<a href="menu.html">Menu</a>
 							</li>
 
 							<li>
@@ -137,7 +136,7 @@
 	<section class="bgwhite p-t-66 p-b-60">
 		<div class="container">
 				<div class="col-md-6 p-b-30">
-					<form class="leave-comment" action="send_contact.php" method="get">
+					<form class="leave-comment">
 						<h4 class="m-text26 p-b-36 p-t-15">
 							Send us your message
 						</h4>
