--- a/login2.html
+++ b/login2.html
@@ -62,7 +62,7 @@
 							</li>
 
 							<li>
-								<a href="product.html">Menu</a>
+								<a href="menu.html">Menu</a>
 							</li>
 
 							<li>
