--- a/manager.html
+++ b/manager.html
@@ -62,7 +62,7 @@
 							</li>
 
 							<li>
-								<a href="product.html">Menu</a>
+								<a href="menu.html">Menu</a>
 							</li>
 
 							<li>
