--- a/product.html
+++ b/product.html
@@ -73,7 +73,7 @@
 							</li>
 
 							<li>
-								<a href="product.html">Menu</a>
+								<a href="menu.html">Menu</a>
 							</li>
 
 							<li>
