--- a/checkout.html
+++ b/checkout.html
@@ -230,7 +230,7 @@
  							<div class="column">
     					
 
-					<form class="personal-information">
+					<form class="personal-information" action="checkout.php" method="post">
 						<h4 class="m-text26 p-b-15 p-t-35">Shipping Information</h4>
     						<p>
 						
@@ -239,7 +239,7 @@
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="phone-number" placeholder="Family Name">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="familyname" placeholder="Family Name">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
@@ -247,27 +247,27 @@
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Phone Number">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="phone" placeholder="Phone Number">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Address Line 1">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="addr1" placeholder="Address Line 1">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Address Line 2">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="addr2" placeholder="Address Line 2">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="City">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="city" placeholder="City">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="State">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="state" placeholder="State">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Zip Code">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="zip" placeholder="Zip Code">
 						</div>
 						</p>
 
@@ -280,39 +280,39 @@
     						<h4 class="m-text26 p-b-15 p-t-35">Billing Information</h4>
     						<p>
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="First Name">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="nameBilling" placeholder="First Name">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="phone-number" placeholder="Family Name">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="familynameBilling" placeholder="Family Name">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="email" placeholder="Email Address">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="emailBilling" placeholder="Email Address">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Phone Number">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="phoneBilling" placeholder="Phone Number">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Address Line 1">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="addr1Billing" placeholder="Address Line 1">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Address Line 2">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="addr2Billing" placeholder="Address Line 2">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="City">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="cityBilling" placeholder="City">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="State">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="stateBilling" placeholder="State">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="name" placeholder="Zip Code">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="zipBilling" placeholder="Zip Code">
 						</div>
 						</p>
   						</div>
@@ -333,7 +333,7 @@
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
-							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="credit-card-number" placeholder="Family Name">
+							<input class="sizefull s-text7 p-l-22 p-r-22" type="text" name="credit-card-number" placeholder="xxxx-xxxx-xxxx-xxxx">
 						</div>
 
 						<div class="bo4 of-hidden size13 m-b-20">
@@ -356,9 +356,9 @@
 
 					<div class="w-size25">
 						<!-- Button -->
-						<a href="checkout.php" class="flex-c-m size2 bg1 hov1 m-text3 trans-0-4">
+						<button class="flex-c-m size2 bg1 hov1 m-text3 trans-0-4">
 							Check Out!
-						</a>
+						</button>
 					</div>
 
 					</form>
